# Dartstournament

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  ROADMAP.md  TODO.md
backend/: pyproject.toml  seed.py
backend/app/: auth.py  database.py  exceptions.py  main.py  websocket.py
backend/app/data/: double_out_checkouts.json  single_out_checkouts.json
backend/app/models/: __init__.py  bet.py  match.py  player.py  special_event.py  tournament.py
backend/app/repositories/: match_repo.py  player_repo.py  special_event_repo.py  tournament_player_repo.py  tournament_repo.py  visit_repo.py
backend/app/routers/: matches.py  mobile.py  players.py  tournaments.py  ws.py
backend/app/schemas/: __init__.py  bet.py  match.py  mobile.py  player.py  special_event.py  tournament.py
backend/app/services/: bonus.py  events.py  handicap.py  ko.py  lightning.py  match.py  vorrunde.py
backend/scripts/: set_pins.py
backend/tests/: conftest.py  test_api_matches.py  test_api_players.py  test_api_tournaments.py  test_bonus.py  test_db_integration.py  test_events.py  test_handicap.py  test_ko.py  test_lightning.py  test_match.py  test_mobile.py  test_models.py  test_vorrunde.py  test_ws.py
docs/superpowers/plans/: 2026-06-05-walkon-screen.md  2026-06-07-cycle3-mobile-web-interface.md  2026-06-07-task24-mobile-frontend-foundation.md
docs/superpowers/specs/: 2026-06-05-walkon-screen-design.md  2026-06-07-cycle3-mobile-web-interface-design.md  2026-06-07-task24-mobile-frontend-foundation-design.md
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx
(+55 files in other folders)
